# local-market-configuration

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.github/workflows/: attach-artifacts-to-release.yml  build-test.yml  lint.yml
aquila/us/: impression_qualification_filter_config.textproto
aquila/us/eventtemplate/v1/: BUILD.bazel  common.proto  display.proto  event.proto  other.proto  video.proto
aquila/us/eventtemplates/v1/: event.proto
origin/uk/eventtemplate/v1/: BUILD.bazel  common.proto  display.proto  event.proto  other.proto  video.proto
